<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_24dp"
        android:title="@string/profile_str" />

    <item
        android:id="@+id/navigation_exercise"
        android:icon="@drawable/ic_exercise_24dp"
        android:title="@string/exercise_str" />

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/ic_plan_24dp"
        android:title="@string/plan_str" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_24dp"
        android:title="@string/history_str" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/settings_str" />

</menu>
